# gstats

./: .envrc  .gitignore  ARCHITECTURE.md  Cargo.toml  DEVELOPMENT.md  PLUGIN_GUIDE.md  README.md  build.rs  config.toml
.github/: YouTrack.md  instructions.md
.github/instructions/: GS-15_PLAN.md  GS-24_PLAN.md  GS-6_PLAN.md  README.md  TRACKING.md  YouTrack.md  YouTrack_Query_Language.md  gstats_architecture.mermaid  instructions.md
.github/instructions/issues/: GS-31_PLAN.md  PROGRESS.md  TRACKING.md
.github/workflows/: pr.yml
benches/: README.md  integration_benchmarks.rs  memory_benchmarks.rs  queue_benchmarks.rs  scanner_benchmarks.rs
devdoc/: GS-12_PLAN.md  GS-1_PLAN.md  GS-2_PLAN.md  GS-3_PLAN.md  GS-4_PLAN.md  GS-5_PLAN.md  README.md
docs/: ARCHITECTURE.md  DEVELOPMENT.md  NOTIFICATIONS.md  PLUGIN_GUIDE.md  api_versioning.md  plugin-coordination-integration.md
examples/: README.md  gstats.toml
src/: cli.rs  config.rs  git.rs  lib.rs  logging.rs  main.rs
src/app/: execution.rs  initialization.rs  mod.rs  repository.rs
src/cli/: args.rs  command_mapper.rs  command_segmenter.rs  contextual_help.rs  converter.rs  date_parser.rs  dynamic_builder.rs  enhanced_parser.rs  global_flags.rs  help_formatter.rs  initial_args.rs  matches_parser.rs  memory_parser.rs  mod.rs  plugin_args.rs  plugin_handler.rs  suggestion.rs
src/cli/tests/: mod.rs  plugin_handler_registry_tests.rs
src/display/: colours.rs  config.rs  format.rs  mod.rs  progress.rs  table.rs  themes.rs
src/notifications/: error.rs  events.rs  manager.rs  mod.rs  tests.rs  traits.rs  typed_publishers.rs
src/output/: authors.rs  mod.rs  reports.rs
src/plugin/: compatibility.rs  context.rs  data_coordinator.rs  data_export.rs  discovery.rs  error.rs  executor.rs  manager.rs  mod.rs  notification.rs  priority_queue.rs  registry.rs  settings.rs  subscriber.rs  traits.rs
src/plugin/builtin/: change_frequency.rs  commits.rs  debt_assessor.rs  export.rs  hotspot_detector.rs  metrics.rs  mod.rs
src/plugin/builtin/commits/: mod.rs
src/plugin/builtin/debug/: config.rs  display.rs  mod.rs
src/plugin/builtin/export/: config.rs  mod.rs  mod_old.rs  template_engine.rs
src/plugin/builtin/export/formats/: common.rs  console.rs  csv.rs  html.rs  json.rs  markdown.rs  mod.rs  template.rs  xml.rs  yaml.rs
src/plugin/builtin/metrics/: mod.rs
src/plugin/builtin/utils/: complexity_calculator.rs  debt_assessor.rs  duplication_detector.rs  format_detection.rs  hotspot_detector.rs  mod.rs
src/plugin/processors/: change_frequency.rs  complexity.rs  debt_assessment.rs  duplication_detector.rs  format_detection.rs  hotspot.rs  mod.rs
src/plugin/tests/: activation_tests.rs  builtin_initialization_tests.rs  coordination_tests.rs  discovery_tests.rs  encapsulation_tests.rs  executor_activation_tests.rs  executor_tests.rs  integration_tests.rs  mock_plugins.rs  mod.rs  notification_tests.rs  priority_tests.rs  registry_tests.rs  version_tests.rs
src/queue/: backoff.rs  cli.rs  config.rs  consumer.rs  consumer_registry.rs  debug.rs  error.rs  events.rs  intermediate.rs  listener.rs  memory.rs  memory_queue.rs  memory_tracker.rs  mod.rs  multi_consumer.rs  notifications.rs  processor_bridge.rs  queue_consumer.rs  scanner_integration.rs  shared_queue.rs  statistics.rs  versioned_message.rs
src/queue/tests/: backoff.rs  basic_queue.rs  debug_backoff.rs  listener.rs  memory_monitoring.rs  memory_tracking.rs  mod.rs  versioning.rs
src/scanner/: async_traits.rs  branch_detection.rs  config.rs  filters.rs  messages.rs  mod.rs  modes.rs  plugin_scanner.rs  publisher.rs  query.rs  statistics.rs  traits.rs  version.rs
src/scanner/async_engine/: checkout_manager.rs  diff_analyzer.rs  engine.rs  error.rs  event_engine.rs  event_filtering.rs  events.rs  file_tracker.rs  mod.rs  repository.rs  scanners.rs  shared_state.rs  stream.rs  streaming_producer.rs  task_manager.rs
src/scanner/async_engine/processors/: change_frequency.rs  event_processor.rs  files.rs  history.rs  mod.rs  statistics.rs
src/scanner/async_engine/tests/: concurrency_tests.rs  engine_tests.rs  integration_tests.rs  manager_tests.rs  mod.rs  publisher_tests.rs  streaming_tests.rs
src/scanner/tests/: basic_scanner_tests.rs  mod.rs  shutdown_coordination_tests.rs
src/stats/: mod.rs
templates/: README.md  TEMPLATE_GUIDE.md  authors-report.j2  commit-summary.j2  data-export.json.j2  security-audit.j2  team-report.html.j2
tests/: cli_integration_test.rs  config_integration_test.rs  data_export_integration.rs  export_plugin_test.rs  git_repository_integration.rs  logging_integration_test.rs  main_integration_test.rs  plugin_output_test.rs  scanner_integration.rs  scanner_module_test.rs
tests/fixtures/: test_config.toml
tests/integration/: data_export_integration.rs  debug_export_workflow_tests.rs  end_to_end.rs  error_recovery.rs  export_formatting_tests.rs  load_testing.rs  mod.rs  notification_export_pipeline.rs  plugin_lifecycle_tests.rs  simple_error_recovery.rs  system_integration.rs
tests/performance/: async_validation.rs
