[package]
name = "gstats"
version = "0.1.0"
edition = "2021"
authors = ["David L Nugent <davidn@uniquode.io>"]
description = "A fast, local-first git analytics tool providing code complexity trends, contributor statistics, performance metrics, and native macOS widgets"
repository = "https://github.com/deeprave/gstats"
license = "MIT"
keywords = ["git", "analytics", "statistics", "performance", "macos"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[[bin]]
name = "gstats"
path = "src/main.rs"

[profile.dev]
debug = true
opt-level = 0

[profile.release]
debug = false
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
git2 = "0.18"
anyhow = "1.0"
