[package]
name = "gstats"
version = "0.1.0"
edition = "2021"
authors = ["David L Nugent <davidn@uniquode.io>"]
description = "A fast, local-first git analytics tool providing code complexity trends, contributor statistics, performance metrics, and native macOS widgets"
repository = "https://github.com/deeprave/gstats"
license = "MIT"
keywords = ["git", "analytics", "statistics", "performance", "macos"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"
build = "build.rs"

# Scanner module API versioning
# The api_version represents the scanner module API compatibility version.
# This should be incremented when making breaking changes to:
# - Scanner traits or interfaces
# - Message format or serialisation
# - Configuration structure  
# - Plugin compatibility requirements
# Format: YYYYMMDD (e.g., 20250727 = 27 July 2025)
[package.metadata.gstats]
api_version = 20250727

[[bin]]
name = "gstats"
path = "src/main.rs"

[profile.dev]
debug = true
opt-level = 0

[profile.release]
debug = false
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
git2 = "0.18"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.7"
toml = "0.8"
dirs = "5.0"
bitflags = { version = "2.4", features = ["serde"] }
bincode = "1.3"
thiserror = "1.0"
crossbeam = "0.8"
crossbeam-queue = "0.3"
crossbeam-channel = "0.5"
parking_lot = "0.12"

[dev-dependencies]
tempfile = "3.8"

[build-dependencies]
toml = "0.8"
