[package]
name = "gstats"
version = "0.1.0"
edition = "2021"
authors = ["David L Nugent <davidn@uniquode.io>"]
description = "A fast, local-first git analytics tool providing code complexity trends, contributor statistics, performance metrics, and native macOS widgets"
repository = "https://github.com/deeprave/gstats"
license = "MIT"
keywords = ["git", "analytics", "statistics", "performance", "macos"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"
build = "build.rs"

# Scanner module API versioning
# The api_version represents the scanner module API compatibility version.
# This should be incremented when making breaking changes to:
# - Scanner traits or interfaces
# - Message format or serialisation
# - Configuration structure  
# - Plugin compatibility requirements
# Format: YYYYMMDD (e.g., 20250727 = 27 July 2025)
[package.metadata.gstats]
api_version = 20250727

[[bin]]
name = "gstats"
path = "src/main.rs"

[profile.dev]
debug = true
opt-level = 0

[profile.release]
debug = false
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
git2 = "0.18"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.7"
toml = "0.8"
dirs = "5.0"
bitflags = { version = "2.4", features = ["serde"] }
bincode = "1.3"
thiserror = "1.0"
crossbeam = "0.8"
crossbeam-queue = "0.3"
crossbeam-channel = "0.5"
parking_lot = "0.12"
tokio = { version = "1.41", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
async-trait = "0.1"
futures = "0.3"
dashmap = "6.0"
tokio-util = "0.7"
pin-project = "1.1"
num_cpus = "1.16"
uuid = { version = "1.0", features = ["v4", "v7"] }
serde_yaml = "0.9"
regex = "1.0"
prettytable-rs = "0.10"

[dev-dependencies]
tempfile = "3.8"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.0"  # Property-based testing
tokio-test = "0.4"  # Async test utilities

[build-dependencies]
toml = "0.8"

# Performance benchmarks
[[bench]]
name = "scanner_benchmarks"
harness = false

[[bench]]
name = "memory_benchmarks" 
harness = false

[[bench]]
name = "queue_benchmarks"
harness = false

[[bench]]
name = "integration_benchmarks"
harness = false

# Performance validation tests
[[test]]
name = "async_validation"
path = "tests/performance/async_validation.rs"

# Integration tests
[[test]]
name = "end_to_end"
path = "tests/integration/end_to_end.rs"

[[test]]
name = "system_integration"
path = "tests/integration/system_integration.rs"

[[test]]
name = "load_testing"
path = "tests/integration/load_testing.rs"

[[test]]
name = "error_recovery"
path = "tests/integration/error_recovery.rs"

[[test]]
name = "simple_error_recovery"
path = "tests/integration/simple_error_recovery.rs"
